# eark-rest-services

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  java_runner.py  main.py  utils.py
app/routers/: about.py  validation.py
templates/: base.html  home.html  navbar.html  result.html
