[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "eark-rest-services"
dynamic = ["version"]
authors = [
  { name="E-ARK Foundation", email="admin@e-ark-foundation.eu" },
]
maintainers = [
  { name="E-ARK Foundation", email="admin@e-ark-foundation.eu" },
  { name="Carl Wilson", email="carl@openpreservation.org" },
]
license = {file = "LICENSE"}
description = "E-ARK Python Information Package Validation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "eark-validator",
]

[project.optional-dependencies]
testing = [
    "pre-commit",
    "pytest",
    "pylint",
    "pytest-cov",
    'pytest-runner',
]

[project.urls]
"Homepage" = "https://www.e-ark-foundation.eu/e-ark-software-py-e-ark-ip-validator/"
"Issues" = "https://github.com/E-ARK-Software/eark-rest-services/issues"
"Repository" = "https://github.com/E-ARK-Software/eark-rest-services.git"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.setuptools]
packages = ["app", "app.routers" ]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.dev{env:GITHUB_RUN_NUMBER:{ccount}}"
dirty_template = "{tag}.dev{env:GITHUB_RUN_NUMBER:{ccount}}+git.{sha}.dirty"
